More on the readme file

--- a/docker/ui/docker-compose.yml
+++ b/docker/ui/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     build:
       context: ../../src/Onyx.ShiftScheduler.Web
       dockerfile: Dockerfile
+    ports:
+      - "9089:80"	  
