Fixing release built optimization

--- a/src/Onyx.ShiftScheduler.Infrastructure/Onyx.ShiftScheduler.Infrastructure.csproj
+++ b/src/Onyx.ShiftScheduler.Infrastructure/Onyx.ShiftScheduler.Infrastructure.csproj
@@ -10,6 +10,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>false</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Qoollo.OptTools.Core" Version="6.0.4217.7" />
