--- a/src/Onyx.ShiftScheduler.Api/Onyx.ShiftScheduler.Api.csproj
+++ b/src/Onyx.ShiftScheduler.Api/Onyx.ShiftScheduler.Api.csproj
@@ -8,7 +8,11 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>false</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
