--- a/src/Onyx.ShiftScheduler.Core/Onyx.ShiftScheduler.Core.csproj
+++ b/src/Onyx.ShiftScheduler.Core/Onyx.ShiftScheduler.Core.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>false</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
